--- a/rate/index.html
+++ b/rate/index.html
@@ -23,11 +23,16 @@
       to help us improve our offering!
     </p>
     <ul>
-      <li value="1">1</li>
-      <li value="2">2</li>
-      <li value="3">3</li>
-      <li value="4">4</li>
-      <li value="5">5</li>
+      <label for="one" class="button">1</label>
+      <input type="radio" name="rate" id="one" value="1">
+      <label for="two" class="button">2</label>
+      <input type="radio" name="rate" id="two" value="2">
+      <label for="three" class="button">3</label>
+      <input type="radio" name="rate" id="three" value="3">
+      <label for="four" class="button">4</label>
+      <input type="radio" name="rate" id="four" value="4">
+      <label for="five" class="button">5</label>
+      <input type="radio" name="rate" id="five" value="5">
     </ul>
     <div class="btn">
       <input type="submit" value="Submit" class="submit">
