--- a/rate/index.html
+++ b/rate/index.html
@@ -43,7 +43,7 @@
 
   <main class="thanks" style="display: none;">
     <img src="images/illustration-thank-you.svg" alt="" class="smartphone">
-    <span>You selected <p id="rate"> </p> out of 5</span>
+    <span id="rate">You selected out of 5</span>
     <h2>Thank you!</h2>
     <p class="greetings">
       We appreciate you taking the time to give a rating. If you ever need more support,
